# rust-leptos-practice

./: README.md
animals/: Cargo.toml
animals/src/: main.rs
inventory-gulp/: .env  Cargo.toml  Trunk.toml  index.html
inventory-gulp.bak/: Cargo.toml  Trunk.toml  index.html
inventory-gulp.bak/css/: style.css
inventory-gulp.bak/src/: app.rs  lib.rs  main.rs
inventory-gulp.bak/src/layouts/: auth.rs  (+2 more)
inventory-gulp/src/: app.rs  lib.rs  main.rs
inventory-gulp/src/components/: mod.rs  search.rs  toast.rs
inventory-gulp/src/layouts/: homelayout.rs  mod.rs  productlayout.rs
inventory-gulp/src/models/: apitoken.rs  credentials.rs  error.rs  mod.rs
inventory-gulp/src/pages/: home.rs  login.rs  mod.rs  product.rs  register.rs
leptonic-template-csr/: Trunk.toml  index.html
leptonic-template-csr/style/: output.css
leptos-fetch/: Cargo.toml  README.md
leptos-fetch/src/: main.rs
owl-project/: Cargo.toml
owl-project/src/: app.rs  main.rs
people-management/: Cargo.toml
people-management/src/: app.rs  lib.rs  main.rs
portfolio/: Cargo.toml  Trunk.toml  index.html
portfolio/src/: app.rs  main.rs
portfolio/style/: output.css
post/: Cargo.toml  Trunk.toml  index.html
post-article/: Cargo.toml  README.md
post-article/src/: app.rs  main.rs
post/src/: main.rs
test-chart/: Cargo.toml  README.md
test-chart/src/: main.rs
test-thaw-ui/: Cargo.toml
test-thaw-ui/src/: app.rs  main.rs
test-thaw-ui/style/: main.scss  output.css
testing/: Cargo.toml
testing/src/: main.rs
toda-org/: Cargo.toml  README.md
toda-org/src/: app.rs  main.rs
(+18 files in other folders)
