[package]
name = "inventory-gulp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.6", features = ["csr"] }
leptos_router = { version = "0.5.6", features = ["csr"] }
cfg-if = "1.0.0"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
serde_json = "1.0"
serde = {version ="1.0", features = ["derive"] }
web-sys = "0.3"
dotenv = "0.15.0"
thiserror = "1.0.56"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
