[package]
name = "post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.5.6", features = ["csr"] }
leptos_router = { version = "0.5.6", features = ["csr"] }
serde = { verion = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
reqwest = { version = "0.11.23", features = ["json"] }
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
futures = "0.3.30"
